/*
Copyright IBM Corp. All Rights Reserved.
SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "github.com/hyperledger/fabric/core/ledger/kvledger/txmgmt/privacyenabledstate";

package privacyenabledstate;

message KVWriteProto {
    string namespace = 1;
    string collection = 2;
    bytes key = 3;
    bool isDelete = 4;
    bytes value = 5;
    bytes version_bytes = 6;
}

message KVWritesBatchProto {
    repeated KVWriteProto kvwrites = 1;
}